HTML Semantic elements

--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
   
   <title>Frontend Mentor | QR code component</title>
   <link rel="stylesheet" type="text/css" href="style.css">
-  <link rel="stylesheet" href="https://fonts.google.com/specimen/Outfit">
+ 
 </head>
 <body>
-  <div class="box">
+  <main>
     <div class="container">
       <div class="img-container">
         <img src="./images/image-qr-code.png">
       </div>
       <div>
-        <p class="bold">Improve your front-end skills by building projects</p>
+        <h1 class="bold">Improve your front-end skills by building projects</h1>
         <p class="normal">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
       </div>
     </div>
-  </div>
+  </main>
 
   
   <!--<div class="attribution">
