--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
  
 </head>
 <body>
-  <main>
+  <main role="main">
     <div class="container">
       <div class="img-container">
-        <img src="./images/image-qr-code.png">
+        <img src="./images/image-qr-code.png" alt="QR code">
       </div>
       <div>
-        <h1 class="bold">Improve your front-end skills by building projects</h1>
+        <h1>Improve your front-end skills by building projects</h1>
         <p class="normal">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
       </div>
     </div>
